--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,12 @@
 <h1>Homepage</h1>
 
 <div class="article-list">
-   {{#articles}} 
+    {{#articles}}
         <article>
-            <a href="/article/{{slug}}"><img src="/images/{{image}}" alt=""></a>
+            <a href="/article/{{slug}}"><img
+            src="/images/{{image}}" alt=""></a>
             <h2><a href="/article/{{slug}}">{{name}}</a></h2>
+            </a>
         </article>
-    {{/articles}} 
+    {{/articles}}
 </div>
